src/components/PCheckbox/PCheckbox.scss
@use "../../styles/utilities.scss" as *;

$checkbox-background-color: $form-control-background-color !default;
$checkbox-border: $form-control-border !default;
$checkbox-border-radius: $form-control-border-radius !default;
$checkbox-height: $form-control-height !default;
$checkbox-size: 1.4em !default;
$checkbox-transition: all $animation-duration-normal ease-in-out !default;
$checkbox-disabled-opacity: $form-control-disabled-opacity !default;
$checkbox-check-size: 0.2em !default;
$checkbox-label-color: $form-control-label-color !default;
$checkbox-label-font-size: $form-control-label-font-size !default;
$checkbox-label-font-weight: $form-control-label-font-weight !default;
$checkbox-label-margin-left: $form-control-padding !default;

$checkbox-hover-background-color: $form-control-hover-background-color !default;
$checkbox-hover-border: $form-control-hover-border !default;
$checkbox-hover-label-color: $form-control-hover-label-color !default;

$checkbox-focus-background-color: $form-control-focus-background-color !default;
$checkbox-focus-border: $form-control-focus-border !default;
$checkbox-focus-label-color: $form-control-focus-label-color !default;

$checkbox-checked-background-color: $form-control-filled-background-color !default;
$checkbox-checked-border: $form-control-filled-border !default;
$checkbox-checked-label-color: $form-control-filled-label-color !default;
$checkbox-checked-check-color: $form-control-filled-color !default;

$checkbox-checked-hover-background-color: $form-control-filled-hover-background-color !default;
$checkbox-checked-hover-border: $form-control-filled-hover-border !default;
$checkbox-checked-hover-label-color: $form-control-filled-hover-label-color !default;
$checkbox-checked-hover-check-color: $form-control-filled-hover-color !default;

$checkbox-checked-focus-background-color: $form-control-filled-focus-background-color !default;
$checkbox-checked-focus-border: $form-control-filled-focus-border !default;
$checkbox-checked-focus-label-color: $form-control-filled-focus-label-color !default;
$checkbox-checked-focus-check-color: $form-control-filled-focus-color !default;

$checkbox-error-background-color: $form-control-error-background-color !default;
$checkbox-error-border: $form-control-error-border !default;
$checkbox-error-color: $form-control-error-color !default;
$checkbox-error-label-color: $form-control-error-label-color !default;
$checkbox-error-check-color: color("grey", "100") !default;
$checkbox-error-checked-background-color: color("danger", "500") !default;
$checkbox-error-text-color: $form-control-error-text-color !default;
$checkbox-error-font-size: $form-control-error-font-size !default;
$checkbox-error-spacing: spacing("xs") !default;

.p-checkbox {
  & > .input {
    align-items: center;
    cursor: pointer;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    height: $checkbox-height;

    & > .label {
      cursor: inherit;
      display: block;
      font-size: $checkbox-label-font-size;
      font-weight: $checkbox-label-font-weight;
      margin-left: $checkbox-label-margin-left;
      transition: $checkbox-transition;
      user-select: none;
    }

    & > .checkbox {
      align-items: center;
      border-radius: $checkbox-border-radius;
      display: flex;
      justify-content: center;
      height: $checkbox-size;
      position: relative;
      outline: none;
      transition: $checkbox-transition;
      width: $checkbox-size;

      & > .check {
        animation: p-checkbox-check $animation-duration-normal ease forwards;
        border-width: $checkbox-check-size;
        border-style: solid;
        border-right-width: 0;
        border-top-width: 0;
        position: absolute;
        margin-top: calc($checkbox-check-size * -0.8);
        height: calc($checkbox-size / 3);
        width: calc($checkbox-size / 2);
      }
    }

    &:not(.checked) {
      & > .checkbox {
        background-color: $checkbox-background-color;
        border: $checkbox-border;
      }

      & > .label {
        color: $checkbox-label-color;
      }
    }

    &:not(.checked):hover:not(:focus-within):not(.disabled):not(.error) {
      & > .checkbox {
        background-color: $checkbox-hover-background-color;
        border: $checkbox-hover-border;
      }

      & > .label {
        color: $checkbox-hover-label-color;
      }
    }

    &:not(.checked):focus-within:not(.disabled):not(.error) {
      & > .checkbox {
        background-color: $checkbox-focus-background-color;
        border: $checkbox-focus-border;
      }

      & > .label {
        color: $checkbox-focus-label-color;
      }
    }

    &.checked {
      & > .checkbox {
        background-color: $checkbox-checked-background-color;
        border: $checkbox-checked-border;

        & > .check {
          border-color: $checkbox-checked-check-color;
        }
      }

      & > .label {
        color: $checkbox-checked-label-color;
      }
    }

    &.checked:hover:not(:focus-within):not(.disabled):not(.error) {
      & > .checkbox {
        background-color: $checkbox-checked-hover-background-color;
        border: $checkbox-checked-hover-border;

        & > .check {
          border-color: $checkbox-checked-hover-check-color;
        }
      }

      & > .label {
        color: $checkbox-checked-hover-label-color;
      }
    }

    &.checked:focus-within:not(.disabled):not(.error) {
      & > .checkbox {
        background-color: $checkbox-checked-focus-background-color;
        border: $checkbox-checked-focus-border;

        & > .check {
          border-color: $checkbox-checked-focus-check-color;
        }
      }

      & > .label {
        color: $checkbox-checked-focus-label-color;
      }
    }

    &.error.checked {
      & > .checkbox {
        background-color: $checkbox-error-checked-background-color;
        border: $checkbox-error-border;

        & > .check {
          border-color: $checkbox-error-check-color;
        }
      }

      & > .label {
        color: $checkbox-error-label-color;
      }
    }

    &.error:not(.checked) {
      & > .checkbox {
        background-color: $checkbox-error-background-color;
        border: $checkbox-error-border;

        & > .check {
          border-color: $checkbox-checked-focus-check-color;
        }
      }

      & > .label {
        color: $checkbox-error-label-color;
      }
    }

    &.disabled {
      cursor: initial;

      & > .checkbox {
        opacity: $checkbox-disabled-opacity;
      }
    }
  }

  & > .error-text {
    color: $checkbox-error-text-color;
    display: block;
    font-size: $checkbox-error-font-size;
    margin-top: $checkbox-error-spacing;
  }
}

@keyframes p-checkbox-check {
  0% {
    transform: scale(0) rotateZ(-50deg);
  }
  100% {
    transform: scale(1) rotateZ(-50deg);
  }
}

